Revised ImagineBreaker interface, more fun included.